--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop web page development software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">wysiwyg site creator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="MJcWuexXz1uVlZ0LM//v6cWyS8ccsJu3oKYPW9cijnjl5cHQvMHAcFlEjsSoyfRzTRz+rnFBb/8I82n1nBAI7RY5EgiYCqBipJRu6cVMUSgX8lenrF3wzkFoj/XWRtbW" data-form-email="true">
+                    <input type="hidden" value="uOUXnRUriAuh/ctUV7z043qnVZSaHZm5wMDdArz0e1WKysLXq2cbZZ+g7G9hHwX6RFw46pf8fnRI4mGxB5bGqrqW83fW0ev3nX+E+m5Kjf1x8/EW/SBex/zQiFeTkl87" data-form-email="true">
 
                     
 
