--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy html web site maker software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">offline web site generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="qY0yWLXGzf58lMxxXdfs/aUHcCB8j3SRzIImXql1brIafSSPs+Nwu7g6xysyU+R6gvVYYyvmgB/W1lN3GKTlkYmmwwa/EmapAY7CHdHCwl9kZfjZG7iYt9+Z1g9yug4P" data-form-email="true">
+                    <input type="hidden" value="Akhp96epX00qWr7iTMKYMB6WvwkmYzM4O3ZIDqd0v/K5X4sKK4SXRz3HKXdQRXH38J/DFbww+B4c8xrGOqnRubXqq3FZKQ7WFsJ/3DgjqTilXwx/nELM4DTGDjquSBRq" data-form-email="true">
 
                     
 
