--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg website development software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy html web site maker software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="rzkE1BJCOStAIOSlZis658cui67xfBmZMMxY2wyu/RlDW7tYsIk8DFQQHkUL8oBqG7/C6N+qHhZRV7bwr8QM+6qHbpHjLbXFWuSd3ZOztGr/6voNUPyFl3iRMQpYSEhU" data-form-email="true">
+                    <input type="hidden" value="yQfCZBJL0KVlxYkfi8tIF5TM8xBmnPozvsgH5jstTZ9QyZdCHyxVaZU48pmKSCfWtyc84PB45iAz4IfoLcPHZNYU3Y4wlF6GeyQbUCsQzu39ZLLocmIb8AN1K+SP/Iiz" data-form-email="true">
 
                     
 
