--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="hy4JjZQQKScJbU+ZxlexOSY7czeOvJMlkRoRsqcHau5qAFqbVkjNraknNWFW1eQziXAAHVhkPqWWEl5INd6JxVJ095tcYTzck98dva+8ie0T/3XfSTmP+Dhd52t0S1UC" data-form-email="true">
+                    <input type="hidden" value="r7ms0J9all85WcglSytlbZ3ooHwNIRGtGulSuIYUPi+ytpZjGMdM6npGWOzEvTFuLmE0vfKhHSLKP0qPSwUZ6NpMF8yx3VubHjqA5/rQd5sJSTiT8t/tgQuyUVSnlKEg" data-form-email="true">
 
                     
 
