--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="ho2dfiVkulbaD+2Cj1AZcQSEFvfOJRdWH+WXeWUKEu5+/y2fM8fVVWV4N2h65Qp6V+VdGkDBXtNDmjEiHPtpfvQqa2YnRHM78mFxZbcHrwVqKEySq2DlzWoSPcCaF4hc" data-form-email="true">
+                    <input type="hidden" value="sfWN6nkwlzXXliAGGQJ/x1L7NK//RPDOJuwwFwUVhJ7DoMKXAvFQ5sa960cge0mHrD/q9krxYCPW1WzZxYDE7XjDXBtILEpHFlSKbRllGjYH02UNh2hoim2777Cz4lBE" data-form-email="true">
 
                     
 
